# chilekids-etl-pipeline

./: .dockerignore  .gitignore  AUDIT_REPORT.md  DATA_CONTRACTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  fast_push.sh  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml  etl.yml
alembic/: env.py
alembic/versions/: 0d732ee101a9_add_metadata_columns_to_staging_records.py  129f09ac6c14_create_analytical_views.py  7a8b9c0d1e2f_add_audit_trigger.py  b3e0a3b2fa5d_initial_schema.py  b80da1af78f7_create_dimension_views.py  e7f1a2b3c4d5_create_audit_schema.py
configs/: schema.sql
gas/: SheetService.gs  last_change.gs  pk_master.gs
reports/: audit_report.md  cleaning_snippets.py  data_audit_report.md  deployment_guide.md  deployment_recommendation.md  fixes.sql
scripts/: audit_data.py  check_env.py  check_hashes.py  export_staging_to_csv.py  load_sheet_to_raw.py  migrate_raw_hashes.py  run_etl.sh  transform_raw_to_staging.py  verify_data.py
src/: config.py  db.py  logger.py  marts.py  models.py  sheets.py  transform.py  utils.py
src/export/: sheets_export.py
src/extract/: bitrix24.py  google_ads.py  google_sheets.py  meta_ads.py  yandex_direct.py  youtube.py
src/load/: postgres_loader.py
src/marts/: build_marts.py
src/transform/: loader.py  normalizer.py  transformer.py
src/utils/: auth.py  config.py  db.py  hash.py  http.py
tests/: test_auth.py  test_db.py  test_elt_flow.py  test_fetch_sheet.py  test_loader.py  test_smoke.py  test_transform.py
tests/integration/: test_db_integration.py
